@@ -32,7 +32,7 @@
             </div>
 
             <div tal:repeat="event calendar.all_day_events" class="cal_event cal_event_pos_full">
-              <a href="#" class="cal_${event._v_layer_color}">${event.title}</a>
+              <a href="${event.show_url}" class="cal_${event.color}">${event.title}</a>
             </div>
           </div>
 
